Reorganized hyprland config

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -1,298 +1,10 @@
-################
-### MONITORS ###
-################
 source = ~/.config/hypr/monitors.conf
-
+source = ~/.config/hypr/programs.conf
 source = ~/.config/hypr/mocha.conf
-
-###################
-### MY PROGRAMS ###
-###################
-
-# See https://wiki.hyprland.org/Configuring/Keywords/
-
-# Set programs that you use
-$terminal = /home/galeano/.cargo/bin/alacritty
-$fileManager = nemo
-$menu = nc -U /run/user/1000/walker/walker.sock
-$browser = google-chrome-stable
-
-#################
-### AUTOSTART ###
-#################
-
-# Autostart necessary processes (like notifications daemons, status bars, etc.)
-# Or execute your favorite apps at launch like this:
-
-exec-once = swww-daemon
-
-exec-once = waybar
-exec-once = swaync
-exec-once = hypridle
-exec-once = wl-paste --type text --watch cliphist store
-exec-once = wl-paste --type image --watch cliphist store
-
-exec-once = dex --autostart --environment Hyprland
-exec-once = waytrogen --restore
-exec-once = kdeconnect-indicator
-exec-once = walker --gapplication-service
-exec-once = nm-applet
-
-
-#############################
-### ENVIRONMENT VARIABLES ###
-#############################
-
-# See https://wiki.hyprland.org/Configuring/Environment-variables/
-
-env = XCURSOR_SIZE,18
-env = XCURSOR_THEME,Bibata-Modern-Classic
-env = HYPRCURSOR_SIZE,18
-env = HYPRCURSOR_THEME,Bibata-Modern-Classic
-
-#####################
-### LOOK AND FEEL ###
-#####################
-
-# Refer to https://wiki.hyprland.org/Configuring/Variables/
-
-# https://wiki.hyprland.org/Configuring/Variables/#general
-general {
-    gaps_in = 5
-    gaps_out = 10
-
-    border_size = 1
-
-    # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    col.active_border = $mauve
-    col.inactive_border = $overlay0
-    # Set to true enable resizing windows by clicking and dragging on borders and gaps
-    resize_on_border = false
-
-    # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
-    allow_tearing = false
-
-    layout = dwindle
-}
-
-xwayland {
-  force_zero_scaling = true
-}
-
-# https://wiki.hyprland.org/Configuring/Variables/#decoration
-decoration {
-    rounding = 10
-
-    # Change transparency of focused and unfocused windows
-    active_opacity = 1.0
-    inactive_opacity = 1.0
-
-    shadow {
-        enabled = false
-        range = 4
-        render_power = 3
-        color = $crust
-    }
-
-    # https://wiki.hyprland.org/Configuring/Variables/#blur
-    blur {
-        enabled = true
-        size = 8
-        passes = 4
-        vibrancy = 0.1696
-    }
-}
-
-# https://wiki.hyprland.org/Configuring/Variables/#animations
-animations {
-    enabled = true
-    bezier = linear, 0, 0, 1, 1
-    bezier = md3_standard, 0.2, 0, 0, 1
-    bezier = md3_decel, 0.05, 0.7, 0.1, 1
-    bezier = md3_accel, 0.3, 0, 0.8, 0.15
-    bezier = overshot, 0.05, 0.9, 0.1, 1.1
-    bezier = crazyshot, 0.1, 1.5, 0.76, 0.92
-    bezier = hyprnostretch, 0.05, 0.9, 0.1, 1.0
-    bezier = fluent_decel, 0.1, 1, 0, 1
-    bezier = easeInOutCirc, 0.85, 0, 0.15, 1
-    bezier = easeOutCirc, 0, 0.55, 0.45, 1
-    bezier = easeOutExpo, 0.16, 1, 0.3, 1
-    animation = windows, 1, 3, md3_decel, popin 60%
-    animation = border, 1, 10, default
-    animation = fade, 1, 2.5, md3_decel
-    animation = workspaces, 1, 3.5, easeOutExpo, slide
-    animation = specialWorkspace, 1, 3, md3_decel, slidevert
-    layerrule = blur, logout_dialog
-    layerrule = blur, waybar-tooltip
-    layerrule = blur, notifications
-}
-
-# Ref https://wiki.hyprland.org/Configuring/Workspace-Rules/
-# "Smart gaps" / "No gaps when only"
-# uncomment all if you wish to use that.
-# workspace = w[tv1], gapsout:0, gapsin:0
-# workspace = f[1], gapsout:0, gapsin:0
-# windowrulev2 = bordersize 0, floating:0, onworkspace:w[tv1]
-# windowrulev2 = rounding 0, floating:0, onworkspace:w[tv1]
-# windowrulev2 = bordersize 0, floating:0, onworkspace:f[1]
-# windowrulev2 = rounding 0, floating:0, onworkspace:f[1]
-
-# See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
-dwindle {
-    pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
-    preserve_split = true # You probably want this
-}
-
-# See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-master {
-    new_status = master
-}
-
-# https://wiki.hyprland.org/Configuring/Variables/#misc
-misc {
-    force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
-    disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
-}
-
-cursor {
-
-  no_hardware_cursors = true
-
-}
-
-#############
-### INPUT ###
-#############
-
-# https://wiki.hyprland.org/Configuring/Variables/#input
-input {
-    kb_layout = us
-    kb_variant = altgr-intl
-
-    follow_mouse = 1
-
-    sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
-
-    repeat_rate = 50
-    repeat_delay = 300
-
-    touchpad {
-        natural_scroll = true
-    }
-}
-
-# https://wiki.hyprland.org/Configuring/Variables/#gestures
-gestures {
-}
-
-# Example per-device config
-# See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
-device {
-    name = epic-mouse-v1
-    sensitivity = -0.5
-}
-
-device {
-    name = at-translated-set-2-keyboard
-    enabled = false
-}
-
-
-###################
-### KEYBINDINGS ###
-###################
-
-# See https://wiki.hyprland.org/Configuring/Keywords/
-$mod = ALT # Sets "Windows" key as main modifier
-$mainMod = SUPER
-
-# Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mod, RETURN, exec, $terminal
-bind = $mod SHIFT, Q, killactive,
-bind = $mod, M, exec, wlogout
-bind = $mod SHIFT, E, exec, $emoji
-bind = $mod, V, togglefloating,
-bind = $mod, D, exec, $menu
-bind = $mod, P, pseudo, # dwindle
-bind = $mod, S, togglesplit, # dwindle
-bind = $mod SHIFT, B, exec, ~/.config/waybar/launch.sh
-bind = $mod, B, exec, $browser
-
-# Move focus with mainMod + arrow keys
-bind = $mod, H, movefocus, l
-bind = $mod, J, movefocus, d
-bind = $mod, K, movefocus, u
-bind = $mod, L, movefocus, r
-
-bind = $mod SHIFT, H, movewindow, l
-bind = $mod SHIFT, J, movewindow, d
-bind = $mod SHIFT, K, movewindow, u
-bind = $mod SHIFT, L, movewindow, r
-
-bind = $mod, F, fullscreen, 0 # 0 toggles, 1 fullscreen, 2 maximize
-
-bind = $mod SHIFT, X, exec, hyprlock
-
-bind = $mod SHIFT, C, exec, hyprctl reload
-
-# Example special workspace (scratchpad)
-# bind = $mod, S, togglespecialworkspace, magic
-# bind = $mod SHIFT, S, movetoworkspace, special:magic
-
-# Scroll through existing workspaces with mainMod + scroll
-bind = $mod, mouse_down, workspace, e+1
-bind = $mod, mouse_up, workspace, e-1
-
-# Move/resize windows with mainMod + LMB/RMB and dragging
-bindm = $mod, mouse:272, movewindow
-bindm = $mod, mouse:273, resizewindow
-
-# Screenshots
-# Requires: grim, slurp, wl-clipboard
-bind = $mainMod SHIFT, S, exec, grim -g "$(slurp)" - | wl-copy
-
-bind = $mod, W, exec, waytrogen
-
-# Laptop multimedia keys for volume and LCD brightness
-bindel = ,XF86AudioRaiseVolume, exec, ~/.config/hypr/scripts/volume.sh up
-bindel = ,XF86AudioLowerVolume, exec, ~/.config/hypr/scripts/volume.sh down
-bindel = ,XF86AudioMute, exec, ~/.config/hypr/scripts/volume.sh mute
-
-bindel = ,XF86AudioMicMute, exec, ~/.config/hypr/scripts/microphone.sh
-
-bindel = ,XF86MonBrightnessUp, exec, ~/.config/hypr/scripts/brightness.sh up
-bindel = ,XF86MonBrightnessDown, exec, ~/.config/hypr/scripts/brightness.sh down
-
-# Requires playerctl
-bindl = , XF86AudioNext, exec, playerctl next
-bindl = , XF86AudioPause, exec, playerctl play-pause
-bindl = , XF86AudioPlay, exec, playerctl play-pause
-bindl = , XF86AudioPrev, exec, playerctl previous
-
-##############################
-### WINDOWS AND WORKSPACES ###
-##############################
-
-source = ~/.config/hypr/workspace.conf
-
-# See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
-# See https://wiki.hyprland.org/Configuring/Workspace-Rules/ for workspace rules
-
-# Example windowrule v1
-# windowrule = float, ^(kitty)$
-
-# Example windowrule v2
-# windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
-
-# Ignore maximize requests from apps. You'll probably like this.
-windowrulev2 = suppressevent maximize, class:.*
-
-# Fix some dragging issues with XWayland
-windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
-windowrulev2 = noblur, floating:1
-windowrulev2 = noborder,class:^(Xdg-desktop-portal-gtk)$
-windowrulev2 = noinitialfocus, class:^(jetbrains-studio), title:^(win.*)
-windowrulev2 = noblur, class:^(jetbrains-idea)
-windowrulev2 = float, class:^(jetbrains-.*),title:^(win.*)
-windowrulev2 = noinitialfocus,class:^jetbrains-(?!toolbox),floating:1
-windowrulev2 = noinitialfocus, class:^(jetbrains-.*)
+source = ~/.config/hypr/env.conf
+source = ~/.config/hypr/autostart.conf
+source = ~/.config/hypr/ui.conf
+source = ~/.config/hypr/input.conf
+source = ~/.config/hypr/keybindings.conf
+source = ~/.config/hypr/workspaces.conf
+source = ~/.config/hypr/window_rules.conf
